finished implementation and comments